Added lookup type tracking

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,6 +23,13 @@
       data-domain="bibtex.ms-ds.org"
       src="https://plsbl.ms-ds.org/js/script.tagged-events.js"
     ></script>
+    <script>
+      window.plausible =
+        window.plausible ||
+        function () {
+          (window.plausible.q = window.plausible.q || []).push(arguments);
+        };
+    </script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
